--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <img src="./bruns.webp" alt="" style="width: 100px; height: auto;">
     <h1 style="color: rgb(250, 38, 0); font-size: 64px; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; letter-spacing: 0.5px; font-weight: 400; translate: 0 -50px; text-shadow: 0 0 8px black;">Olá, funcionário</h1>
-    <p style="color: white; font-size: 32px; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; translate: 0 -55px; font-weight: 700; text-shadow: 0 0 6px black; text-align: center;">O senhor gostaria<br> de receber um aumento?</p>
+    <p style="color: white; font-size: 32px; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; translate: 0 -55px; font-weight: 700; text-shadow: 0 0 6px black; text-align: center;">O senhor gostaria<br> de ser efetivado?</p>
     <div class="botoes">
 
         <a href="./obrigado.html"><button id="pos" style="cursor: pointer;">Não, obrigado! Estou feliz assim</button></a>
